# Lumen

./: CMakeLists.txt  Main.cpp  README.md  image.ppm  main.cpp  ray.cpp  ray.h  test  vec3.cpp  vec3.h
include/: Pass.h  Picture.h  Ray.h  Sphere.h  Vec3.h
source/: Picture.cpp
